-fix missing tags -fix image row

--- a/locations/templates/locations/location_page.html
+++ b/locations/templates/locations/location_page.html
@@ -12,12 +12,23 @@
 
     {{ page.body|richtext }}
 
+    <div style="display: flex">
     {% for item in page.gallery_images.all %}
         <div style="float: left; margin: 10px">
             {% image item.image fill-320x240 %}
             <p>{{ item.caption }}</p>
         </div>
     {% endfor %}
+    </div>
+
+    {% if page.tags.all.count %}
+    <div class="tags">
+        <h3>Tags</h3>
+        {% for tag in page.tags.all %}
+            <a href="{% slugurl 'tags' %}?tag={{ tag }}"><button type="button">{{ tag }}</button></a>
+        {% endfor %}
+    </div>
+    {% endif %}
 
     <p><a href="{{ page.get_parent.url }}">Return to locations</a></p>
 {% endblock %}
