moved latitude and longitude into single field

--- a/locations/templates/locations/location_page.html
+++ b/locations/templates/locations/location_page.html
@@ -30,5 +30,15 @@
     </div>
     {% endif %}
 
-    <p><a href="{{ page.get_parent.url }}">Return to locations</a></p>
+    {% if page.lat_long %}
+    <div class="map">
+        <h3>Map</h3>
+        <iframe
+            width="600" height="450" frameborder="0" style="border:0"
+            src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBKC9GWNbQ95x0CH2iQvOkTZdwoP3aEjYM&center={{page.specific.lat_long}}&zoom=18&maptype=satellite" allowfullscreen>
+       </iframe>
+    </div>
+   {% endif %}
+
+   <p><a href="{{ page.get_parent.url }}">Return to {{page.get_parent.title}}</a></p>
 {% endblock %}
