--- a/locations/templates/locations/location_tag_index_page.html
+++ b/locations/templates/locations/location_tag_index_page.html
@@ -21,4 +21,6 @@
         No pages found with that tag.
     {% endfor %}
 
+   <p><a href="{{ page.get_parent.url }}">Return to {{page.get_parent.title}}</a></p>
+   
 {% endblock %}
