--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -9,27 +9,22 @@
 
     <div class="intro">{{ page.intro|richtext }}</div>
 
-    {% for post in locationpages %}
-    {% with post=post.specific %}
-        <h2><a href="{% pageurl post %}">{{ post.title }}</a></h2>
+    {% for tag, pages in locationpagetags.items %}
+        <div>
+            <a href="{% slugurl 'tags' %}?tag={{ tag }}"><h2>{{ tag | title }}s</h2></a>
+            {% for child in pages %}
+                {% with child=child.specific %}
+                    <h3><a href="{% pageurl child %}">{{ child.title }}</a></h3>
 
-        {% with post.main_image as main_image %}
-            {% if main_image %}{% image main_image fill-160x100 %}{% endif %}
-        {% endwith %}
+                    {% with child.main_image as main_image %}
+                        {% if main_image %}{% image main_image fill-160x100 %}{% endif %}
+                    {% endwith %}
 
-        <p>{{ post.intro }}</p>
-        {{ post.body|richtext }}
-    {% endwith %}
-
-    {% if page.tags.all.count %}
-        <div class="tags">
-            <h3>Tags</h3>
-            {% for tag in page.tags.all %}
-                <a href="{% slugurl 'tags' %}?tag={{ tag }}"><button type="button">{{ tag }}</button></a>
+                    <p>{{ child.intro }}</p>
+                    {{ child.body|richtext }}
+                {% endwith %}
             {% endfor %}
         </div>
-    {% endif %}
-
-{% endfor %}
+    {% endfor %}
 
 {% endblock %}
