--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -9,6 +9,17 @@
 
     <div class="intro">{{ page.intro|richtext }}</div>
 
+    {% if page.promoted_pages.count %}
+    <div class="promoted_pages">
+        Promoted:
+        <ul>
+        {% for promoted_page in page.promoted_pages.all %}
+            <li>{{ promoted_page.page.title }}</li>
+        {% endfor %}
+        </ul>
+    </div>
+    {% endif %}
+
     {% for tag, pages in locationpagetags.items %}
         <div>
             <a href="{% slugurl 'tags' %}?tag={{ tag }}"><h2>{{ tag | title }}s</h2></a>
@@ -26,5 +37,48 @@
             {% endfor %}
         </div>
     {% endfor %}
+
+    {% if locationsnearme %}
+        Near me:
+        <ul>
+        {% for page_near_me in locationsnearme %}
+            <li>{{ page_near_me.title }}</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
+
+    <script>
+        function setCookie(name, value, seconds) {
+            var expires = "";
+            if (seconds) {
+                var date = new Date();
+                date.setTime(date.getTime() + (seconds * 1000));
+                expires = "; expires=" + date.toUTCString();
+            }
+            document.cookie = name + "=" + (value || "")  + expires + "; path=/";
+        }
+
+        function getCookie(name) {
+            var nameEQ = name + "=";
+            var ca = document.cookie.split(';');
+            for(var i=0; i < ca.length; i++) {
+                var c = ca[i];
+                while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+                if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+            }
+            return null;
+        }
+
+        function setPositionAndReload(position) {
+            setCookie('geo', position.coords.latitude + ',' + position.coords.longitude, 300);
+            location.reload();
+        }
+    
+        if (getCookie('geo') == null) {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(setPositionAndReload);
+            }
+        }
+    </script>
 
 {% endblock %}
