--- a/locations/templates/locations/location_page.html
+++ b/locations/templates/locations/location_page.html
@@ -5,17 +5,17 @@
 {% block body_class %}template-locationpage{% endblock %}
 
 {% block content %}
-    <h1>{{ page.title }}</h1>
-    <p class="meta">{{ page.date }}</p>
+    <h1 class="text-center text-center mt-4">{{ page.title }}</h1>
+    <p class="meta text-center">{{ page.date }}</p>
 
-    <div class="intro">{{ page.intro }}</div>
+    <div class="intro text-center">{{ page.intro }}</div>
 
     {{ page.body|richtext }}
 
     <div style="display: flex">
     {% for item in page.gallery_images.all %}
         <div style="float: left; margin: 10px">
-            {% image item.image fill-320x240 %}
+            {% image item.image fill-320x240 as store_photo%}
             <p>{{ item.caption }}</p>
         </div>
     {% endfor %}
@@ -25,23 +25,39 @@
 
 
     {% if page.tags.all.count %}
-    <div class="tags">
-        <h3>Tags</h3>
+    <h3 class="text-center">Tags</h3>
+    <div class="tags d-flex flex-row justify-content-around">
         {% for tag in page.tags.all %}
-            <a href="{% slugurl 'tags' %}?tag={{ tag }}"><button type="button">{{ tag }}</button></a>
+            <a href="{% slugurl 'tags' %}?tag={{ tag }}">
+		<button type="button" class="btn btn-primary">
+ 			 {{ tag }}
+			<span class="badge badge-light">9</span>
+  			<span class="sr-only">unread messages</span>
+		</button>
+            </a>
+
+
+
         {% endfor %}
     </div>
     {% endif %}
 
     {% if page.lat_long %}
     <div class="map">
-        <h3>Map</h3>
+        
+    	<h3 class="text-center">Map</h3>
         <iframe
             width="600" height="450" frameborder="0" style="border:0"
             src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBKC9GWNbQ95x0CH2iQvOkTZdwoP3aEjYM&center={{page.specific.lat_long}}&zoom=18&maptype=satellite" allowfullscreen>
        </iframe>
     </div>
    {% endif %}
-
-   <p><a href="{{ page.get_parent.url }}">Return to {{page.get_parent.title}}</a></p>
+	<div class="d-flex flex-row justify-content-center">
+	
+		<a href="{{ page.get_parent.url }}">
+			<button type="button" class="btn btn-outline-primary">Back
+			</button>
+	
+		</a>
+	</div>
 {% endblock %}
