--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -44,7 +44,7 @@
 
     
     <h4 class="text-center mt-5"> Browse by Tag 🏷️ :</h4>
-	<div class="d-flex flex-row justify-content-between mt-5 px-2">
+	<div class="d-flex flex-row justify-content-around mt-5 px-2">
 
     		{% for tag, pages in locationpagetags.items %}
         		<div>
@@ -52,8 +52,6 @@
 
 					<button type="button" class="btn btn-primary">
  		 				{{tag | title }} 
-						<span class="badge badge-light">{{ tag|length }}</span>
- 		 				<span class="sr-only">unread messages</span>
 					</button>
 
            			 </a>
