--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -56,9 +56,8 @@
         </a>
     </div>
     {% endif %}
-    <h1> {{ locationpagetags.items  }} </h1>
     {% for tag, pages in locationpagetags.items %}
-        {% if pages.count >= 1 %}
+        {% if pages.count %}
         <a href="{% slugurl 'tags' %}?tag={{ tag }}"><h2 class="text-center mt-5">{{ tag | title }}s</h2></a>
         <div class="row">
             {% for child in pages %}
