--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -1,101 +1,118 @@
 {% extends "base.html" %}
 
-{% load wagtailcore_tags wagtailimages_tags %}
+{% load wagtailcore_tags wagtailimages_tags wagtailroutablepage_tags %}
 
 {% block body_class %}template-locationsindexpage{% endblock %}
 
 {% block content %}
 
+    {% if search_term %}
+      <header class="page-header">
+          <h1 class="page-title">Search Results for <span>{{ search_type }}: {{ search_term }}</span></h1>
+      </header>
+    {% endif %}
 
-    <h1 class="text-center mt-5">{{ page.title }}</h1>
+    <div class="mt-4 search-holder d-flex flex-row justify-content-around">
+
+
+        <form class="form-inline my-2 my-lg-0" method="get" role="search" action="{% routablepageurl page 'post_search' %}">
+            <input class="form-control mr-sm-2 input-size" type="search" name="tag" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+        </form>
+
+    </div>
+
+
+    <!--
+    <h1 class="text-center mt-3">{{ page.title }}</h1>
 
     <div class="intro">{{ page.intro|richtext }}</div>
-
+    -->
     {% if page.promoted_pages.count %}
     {% if page.promoted_pages_title %}
+    <!-- removed for simplicty - can add back later
     <div>
         <h2 class="text-center mt-5">{{ page.promoted_pages_title }}</h2>
         {% if page.promoted_pages_intro %}
             <div class="intro">{{ page.promoted_pages_intro|richtext }}</div>
         {% endif %}
     </div>
+    -->
     {% endif %}
-    <div id="promotedCarousel" class="carousel slide bg-secondary" data-ride="carousel">
-        {% if indexed_promoted_pages|length <= 8 %}
-        <ol class="carousel-indicators">
-            {% for i,p in indexed_promoted_pages %}
-            <li data-target="#promotedCarousel" data-slide-to="{{i}}" {% if i == 0 %}class="active"{% endif %}></li>
-            {% endfor %}
-        </ol>
-        {% endif %}
-        <div class="carousel-inner">
-            {% for i,p in indexed_promoted_pages %}
-            <div class="carousel-item {% if i == 0 %}active{% endif %}">
-                {% with p.promoted_page.specific as promoted_page %}
-                {% with promoted_page.main_image as main_image %}
-                    {% if main_image %}{% image main_image fill-300x150 class="mx-auto d-block" %}{% endif %}
-                {% endwith %}
-                {% endwith %}
-                <div class="carousel-caption d-none d-md-block">
-                    {% if p.caption %}
-                    <h5>{{ p.caption }}</h5>
-                    {% else %}
-                    <h5>{{ p.promoted_page.title }}</h5>
-                    {% endif %}
-                </div>
+    <div class="card mt-2 shadow-lg p-3 mb-5 bg-white rounded">
+        <h5 class="card-header bg-primary text-white text-center">Promotions</h5>
+        <div class="card-body">
+
+        
+        <div id="promotedCarousel" class="carousel slide bg-secondary" data-ride="carousel">
+            {% if indexed_promoted_pages|length <= 8 %}
+                <ol class="carousel-indicators">
+                    {% for i,p in indexed_promoted_pages %}
+                        <li data-target="#promotedCarousel" data-slide-to="{{i}}" {% if i == 0 %}class="active"{% endif %}></li>
+                    {% endfor %}
+                </ol>
+            {% endif %}
+            <div class="carousel-inner">
+                {% for i,p in indexed_promoted_pages %}
+                    <div class="carousel-item {% if i == 0 %}active{% endif %}">
+                        {% with p.promoted_page.specific as promoted_page %}
+                            {% with promoted_page.main_image as main_image %}
+                                {% if main_image %}{% image main_image fill-300x150 class="mx-auto d-block premio-carousel-img" %}{% endif %}
+                            {% endwith %}
+                        {% endwith %}
+                        <div class="carousel-caption d-none d-md-block">
+                            {% if p.caption %}
+                                <h5>{{ p.caption }}</h5>
+                            {% else %}
+                                <h5>{{ p.promoted_page.title }}</h5>
+                            {% endif %}
+                        </div>
+                   </div>
+                {% endfor %}
             </div>
-            {% endfor %}
-        </div>
-        <a class="carousel-control-prev" href="#promotedCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#promotedCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+            <a class="carousel-control-prev" href="#promotedCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#promotedCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+       </div>
+
+      </div>
     </div>
     {% endif %}
+    <!--
     {% for tag, pages in locationpagetags.items %}
         {% if pages.count %}
         <a href="{% slugurl 'tags' %}?tag={{ tag }}"><h2 class="text-center mt-5">{{ tag | title }}s</h2></a>
         <div class="row">
             {% for child in pages %}
-                {% with child=child.specific %}
-                <div class="col-sm">
-                    <h3><a href="{% pageurl child %}">{{ child.title }}</a></h3>
-
-                    {% with child.main_image as main_image %}
-                        {% if main_image %}{% image main_image fill-160x100 %}{% endif %}
-                    {% endwith %}
-
-                    <p>{{ child.intro }}</p>
-                    {{ child.body|richtext }}
-                </div>
-                {% endwith %}
+                {% include "child_specific.html" with child_arg=child.specific %}
             {% endfor %}
         </div>
         {% endif %}
     {% endfor %}
-
+     -->
     {% if locationsnearme %}
-    <h2 class="text-center mt-5">Locations Near Me</h2>
-    {% for page in locationsnearme %}
-        <div class="row">
-            {% with page=page.specific %}
-            <div class="col-sm">
-                <h3><a href="{% pageurl page %}">{{ page.title }}</a></h3>
+        <h2 class="text-center mt-5">Locations Near Me</h2>
+        {% for page in locationsnearme %}
+            <div class="row">
+                {% with page=page.specific %}
+                    <div class="col-sm">
+                    <h3><a href="{% pageurl page %}">{{ page.title }}</a></h3>
 
-                {% with page.main_image as main_image %}
-                    {% if main_image %}{% image main_image fill-160x100 %}{% endif %}
+                    {% with page.main_image as main_image %}
+                        {% if main_image %}{% image main_image fill-160x100 %}{% endif %}
+                    {% endwith %}
+
+                    <p>{{ page.intro }}</p>
+                    {{ page.body|richtext }}
+                    </div>
                 {% endwith %}
-
-                <p>{{ page.intro }}</p>
-                {{ page.body|richtext }}
             </div>
-            {% endwith %}
-        </div>
-    {% endfor %}
+        {% endfor %}
     {% endif %}
     
     <script>
