--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -83,19 +83,21 @@
       </div>
     </div>
     {% endif %}
-    <!--
-
     {% for tag, pages in locationpagetags.items %}
         {% if pages.count %}
-        <a href="{% slugurl 'tags' %}?tag={{ tag }}"><h2 class="text-center mt-5">{{ tag | title }}s</h2></a>
-        <div class="row">
+
+        <a href="{% slugurl 'tags' %}?tag={{ tag }}">
+          <h2 class="text-center mt-5">
+	    <button type="button" class="btn btn-primary">{{ tag | title }}</button>
+          </h2>
+        </a>
+        <div class="d-flex flex-column align-tems-center justify-content-start">
             {% for child in pages %}
                 {% include "child_specific.html" with child_arg=child.specific %}
             {% endfor %}
         </div>
         {% endif %}
     {% endfor %}
-     -->
     {% if locationsnearme %}
         <h2 class="text-center mt-5">Locations Near Me</h2>
         {% for page in locationsnearme %}
