--- a/premio_cms/templates/child_specific.html
+++ b/premio_cms/templates/child_specific.html
@@ -1,15 +1,30 @@
 
 {% load wagtailcore_tags wagtailimages_tags %}
 
-<div class="col-sm">
-    <h3><a href="{% pageurl child_arg %}">{{ child_arg.title }}</a></h3>
+<!-- bootstrap css -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    {% with child_arg.main_image as main_image %}
-        {% if main_image %}{% image main_image fill-160x100 %}{% endif %}
-    {% endwith %}
 
-    <p>{{ child_arg.intro }}</p>
-    {{ child_arg.body|richtext }}
+<div class="card shadow-lg mb-2 rounded" style="width: 18rem;">
+  {% with child_arg.main_image as main_image %}
+    {% if main_image %}{% image main_image fill-160x200 class="card-img card-img-size" %}{% endif %}
+  {% endwith %}
+  <div class="card-img-overlay">
+    <h5 class="card-title">{{ child_arg.title }}</h5>
+    <p class="card-text">{{ child_arg.body|richtext }}</p>
+    <a href="{% pageurl child_arg %}" class="btn btn-primary">Go</a>
+  </div>
 </div>
+
+<!-- bootstrap js-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
+
+
+
+
+
+
+
 
 
