--- a/premio_cms/templates/location_preview.html
+++ b/premio_cms/templates/location_preview.html
@@ -1,33 +1,22 @@
-
 {% load wagtailcore_tags wagtailimages_tags %}
 
 <!-- bootstrap css -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-<a href="{% pageurl child_arg %}" style="text-decoration:none;">
+<a href="{% pageurl page %}" style="text-decoration:none;">
 
 
   <div class="card shadow-lg p-3 mb-5 rounded" style="width: 18rem;">
 
-    {% with child_arg.main_image as main_image %}
+    {% with page.main_image as main_image %}
       {% if main_image %}{% image main_image fill-160x200 class="card-img-top" %}{% endif %}
     {% endwith %}
 
     <div class="card-body">
-      <p class="card-text">{{ child_arg.title }}</p>
+      <p class="card-text">{{ page.title }}</p>
     </div>
   </div>
 </a>
 
 <!-- bootstrap js-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
-
-
-
-
-
-
-
-
-
