--- a/premio_cms/templates/location_preview.html
+++ b/premio_cms/templates/location_preview.html
@@ -13,7 +13,7 @@
     {% endwith %}
 
     <div class="card-body">
-      <p class="card-text">{{ page.title }}</p>
+      <p class="card-text text-center">{{ page.title }}</p>
     </div>
   </div>
 </a>
