--- a/premio_cms/templates/location_preview.html
+++ b/premio_cms/templates/location_preview.html
@@ -1,8 +1,7 @@
+{% extends "base.html" %}
+
 {% load wagtailcore_tags wagtailimages_tags %}
-
-<!-- bootstrap css -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
+{% block content %}
 <a href="{% pageurl page %}" style="text-decoration:none;">
 
 
@@ -17,6 +16,4 @@
     </div>
   </div>
 </a>
-
-<!-- bootstrap js-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+{% endblock %}
