implemented suggested changes in pr #8

--- a/premio_cms/templates/base.html
+++ b/premio_cms/templates/base.html
@@ -29,7 +29,7 @@
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
 
-        <div class="container" style="display:flex; flex-direction:column;  justify-content:start; align-items: center;">
+        <div class="container d-flex flex-column justify-content-start align-items-center">
         {% block content %}{% endblock %}
         </div>
 
