--- a/premio_cms/static/css/premio_cms.css
+++ b/premio_cms/static/css/premio_cms.css
@@ -3,29 +3,29 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
+.location-container-width {
+
+    width: 250px;
+
+}
+
 * {
-
     font-family: 'Roboto', sans-serif;
-
 }
 
 @media only screen
     and (max-device-width: 828px) {
     * {
         font-family: 'Roboto', sans-serif;
-
     }
+   
     .premio-carousel-img {
         width: 100%;
         height: 50%;
-        }
+    }
 
     .input-size {
         width: 70vw;
-    }
-
-    .search-svg {
-        width: 10%;
     }
 }
 
