dont pluralize tags

--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -59,7 +59,7 @@
 
     {% for tag, pages in locationpagetags.items %}
         {% if pages.count %}
-        <a href="{% slugurl 'tags' %}?tag={{ tag }}"><h2 class="text-center mt-5">{{ tag | title }}s</h2></a>
+        <a href="{% slugurl 'tags' %}?tag={{ tag }}"><h2 class="text-center mt-5">{{ tag | title }}</h2></a>
         <div class="row">
             {% for child in pages %}
                 {% with child=child.specific %}
