started mobile design (safari)

--- a/premio_cms/templates/location_preview.html
+++ b/premio_cms/templates/location_preview.html
@@ -1,13 +1,9 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 
-    <div class="card shadow-lg p-3 m-3 rounded">
+    <div class="swiper-slide">
         <a href="{% pageurl page %}">
             {% with page.main_image as main_image %}
-            {% if main_image %}{% image main_image fill-160x200 class="card-img-top" %}{% endif %}
+            {% if main_image %}{% image main_image fill-1000x1000-c100 class="card-img-top rounded-corners" %}{% endif %}
             {% endwith %}
         </a>
-        <div class="card-body">
-            <p class="card-text text-center text-primary">{{ page.title }}</p>
-            <p class="card-text">{{ page.intro }}</p>
-        </div>
     </div>
