--- a/locations/templates/locations/location_page.html
+++ b/locations/templates/locations/location_page.html
@@ -6,37 +6,41 @@
 
 {% block content %}
 
+    <a href="{{ page.get_parent.url }}">
+        <div class="premio-back-btn">
+            <img src="https://img.icons8.com/android/96/000000/back.png" width="15px" height="15px"/>
+        </div>
+    </a>
+    <div class="swiper-location-page-images">
+        <div class="swiper-wrapper">
+            {% for item in page.gallery_images.all %}
+                <div class="swiper-slide">
+                    {% image item.image fill-1000x1000-c100 class="location-page-img" %}
+	    	</div>
+            {% endfor %}
+        </div>
+    </div>
+
+    {% if page.lat_long %}
     <div class="row">
+
+    <div class="row" style="width:90vw;">
         <div class="col">
-            <div class="text-center">
-                <h1>{{ page.title }}</h1>
-                <div class="intro">
-                    {{ page.intro }}
-                </div>
-                <div class="page-body">
+            <div class="ml-4">
+                <h2>{{ page.title }}</h2>
+                <div class="page-body mt-2 body-font">
                     {{ page.body|richtext }}
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="row">
-    {% for item in page.gallery_images.all %}
-        <div class="card shadow-lg p-3 m-3 rounded">
-            {% image item.image fill-320x240 %}
-            <div class="card-body">
-                <p>{{ item.caption }}</p>
-            </div>
-        </div>
-    {% endfor %}
-    </div>
+    <div class="placeholder-div"></div>
 
-    {% if page.lat_long %}
-    <div class="row">
             <div class="card shadow-lg p-3 mx-auto rounded">
                 <iframe
                     class="mx-auto d-block"
-                    width="400" height="250" frameborder="0" style="border:0"
+                    width="414px" height="150px" frameborder="0" style="border:0"
                                                              src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBKC9GWNbQ95x0CH2iQvOkTZdwoP3aEjYM&center={{page.specific.lat_long}}&zoom=18" allowfullscreen>
                 </iframe>
             </div>
@@ -56,13 +60,30 @@
     </div>
     {% endif %}
 
-    <div class="row">
-        <div class="col">
-            <div class="text-center">
-                <a href="{{ page.get_parent.url }}">
-                    <button type="button" class="btn btn-outline-primary">Return to {{page.get_parent.title}}</button>
-                </a>
-            </div>
-        </div>
-    </div>
+<script>
+
+    var locationPageImageSwiper = new Swiper('.swiper-location-page-images', {
+        slidesPerView: 1,
+        spaceBetween: 2,
+	effect: 'coverflow',
+	coverflowEffect: {
+        rotate: 50,
+        stretch: 0,
+        depth: 100,
+        modifier: 1,
+	autoplay: {delay: 2},
+        slideShadows: false,
+      },
+        pagination: {
+        
+            el: '.swiper-pagination',
+            clickable: true,
+        }
+
+
+
+    });
+
+</script>
 {% endblock %}
+
