--- a/locations/templates/locations/locations_index_page.html
+++ b/locations/templates/locations/locations_index_page.html
@@ -7,77 +7,109 @@
 {% block content %}
 
 
-    <h1 class="text-center mt-5">{{ page.title }}</h1>
 
-    <div class="intro">{{ page.intro|richtext }}</div>
-
+    <div class="placeholder-div mt-4"></div>
+    <div class="content-title-holder">
+       <h2 class="ml-4">Promotions</h2>
+	<!-- replace w/ static file later -->
+       <img class="svg-special-label mr-4 mb-2" src="https://svgshare.com/i/TJu.svg"/>
+    </div>
     {% if page.promoted_pages.count %}
-    {% if page.promoted_pages_title %}
-    <div>
-        <h2 class="text-center mt-5">{{ page.promoted_pages_title }}</h2>
-        {% if page.promoted_pages_intro %}
-            <div class="intro">{{ page.promoted_pages_intro|richtext }}</div>
-        {% endif %}
-    </div>
-    {% endif %}
-    <div id="promotedCarousel" class="carousel slide bg-secondary" data-ride="carousel">
-        {% if indexed_promoted_pages|length <= 8 %}
-        <ol class="carousel-indicators">
+    <div class="swiper-promotions-container mt-4">
+
+        <div class="swiper-wrapper"> 
             {% for i,p in indexed_promoted_pages %}
-            <li data-target="#promotedCarousel" data-slide-to="{{i}}" {% if i == 0 %}class="active"{% endif %}></li>
-            {% endfor %}
-        </ol>
-        {% endif %}
-        <div class="carousel-inner">
-            {% for i,p in indexed_promoted_pages %}
-            <div class="carousel-item {% if i == 0 %}active{% endif %}">
-                {% with p.promoted_page.specific as promoted_page %}
-                {% with promoted_page.main_image as main_image %}
-                    {% if main_image %}{% image main_image fill-300x150 class="mx-auto d-block" %}{% endif %}
+                {% with p.promoted_page.specific as promoted_page %}	
+		    {% include "promotions-carousel.html" with page=promoted_page %}
                 {% endwith %}
-                {% endwith %}
-                <div class="carousel-caption d-none d-md-block">
-                    {% if p.caption %}
-                    <h5>{{ p.caption }}</h5>
-                    {% else %}
-                    <h5>{{ p.promoted_page.title }}</h5>
-                    {% endif %}
-                </div>
-            </div>
             {% endfor %}
+            
         </div>
-        <a class="carousel-control-prev" href="#promotedCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#promotedCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
     </div>
+
+
+    <div class="placeholder-div mt-4"></div>
     {% endif %}
 
     {% for tag, pages in locationpagetags.items %}
         {% if pages.count %}
-        <a href="{% slugurl 'tags' %}?tag={{ tag }}"><h2 class="text-center mt-5">{{ tag | title }}</h2></a>
-        <div class="row">
-            {% for child in pages %}
-                {% include "location_preview.html" with page=child.specific %}
-            {% endfor %}
+        <div class="content-title-holder">
+
+            <h2 class="ml-4">{{ tag | title }}</h2>
+            <a class="a-color" href="{% slugurl 'tags' %}?tag={{ tag }}"><p class="mr-3  mt-3">See all</p></a>
         </div>
+	<div class="swiper-container">
+		<div class="swiper-wrapper">
+			{% for child in pages %}
+				{% include "location_preview.html" with page=child.specific %}
+			{% endfor %}
+                </div>
+        </div>
+
+         <div class="placeholder-div mt-4"></div>
         {% endif %}
     {% endfor %}
-
     {% if locationsnearme %}
-    <h2 class="text-center mt-5">Locations Near Me</h2>
-    {% for page in locationsnearme %}
-        <div class="row">
-            {% include "location_preview.html" with page=page.specific %}
+    <div class="content-title-holder">
+        <h2 class="ml-4">Near Me</h2>
+	<!-- replace w/ static file later -->
+        <img class="svg-special-label mr-4 mb-2" src="https://svgshare.com/i/TL9.svg"/>
+    </div>
+    <div class="swiper-container">
+        <div class="swiper-wrapper">
+
+            {% for page in locationsnearme %}
+                {% include "location_preview.html" with page=page.specific %}
+            {% endfor %}
         </div>
-    {% endfor %}
+    </div>
+
     {% endif %}
     
     <script>
+
+    var generalSwiper = new Swiper('.swiper-container', {
+        slidesPerView: 2,
+        spaceBetween: 2,
+	centerInsufficientSlides: true,
+	loop: true,
+	effect: 'coverflow',
+	coverflowEffect: {
+        rotate: 50,
+        stretch: 0,
+        depth: 100,
+        modifier: 1,
+        slideShadows: false,
+      },
+        pagination: {
+        
+            el: '.swiper-pagination',
+            clickable: true,
+        }
+    });
+
+    var promotionsSwiper = new Swiper('.swiper-promotions-container', {
+        slidesPerView: 1,
+        spaceBetween: 2,
+	effect: 'coverflow',
+	coverflowEffect: {
+        rotate: 50,
+        stretch: 0,
+        depth: 100,
+        modifier: 1,
+	autoplay: {delay: 2},
+        slideShadows: false,
+      },
+        pagination: {
+        
+            el: '.swiper-pagination',
+            clickable: true,
+        }
+
+
+
+    });
+        
         function setCookie(name, value, seconds) {
             var expires = "";
             if (seconds) {
