--- a/premio_cms/templates/promotions-carousel.html
+++ b/premio_cms/templates/promotions-carousel.html
@@ -2,8 +2,6 @@
 
     <div class="swiper-slide promotion-slide">
         <a href="{% pageurl page %}">
-
-
            <div class="card shadow-lg" style="width: 100%;">
              {% with page.main_image as main_image %}
              {% if main_image %}{% image main_image fill-1000x1000-c100 class="card-img-top" %}{% endif %}
@@ -11,7 +9,7 @@
              <div class="card-body">
                <h5 class="card-title">{{ page.title }}</h5>
                <p class="card-text">{{ page.body|richtext }} </p>
-               <a href="#" class="btn btn-primary mt-2">Learn more</a>
+               <a href="{% pageurl page %}" class="btn btn-primary mt-2">Learn more</a>
              </div>
            </div>
         </a>
